{
    "name": "TouchInput",
    "maps": [
        {
            "name": "TouchScreenGamePlay",
            "id": "78657e32-cd42-4576-a9ec-c3c975503740",
            "actions": [
                {
                    "name": "PrimaryFingerPosition",
                    "type": "Value",
                    "id": "1fc44d7d-d4ed-4a85-b949-9b94606c3a24",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryFingerPosition",
                    "type": "Value",
                    "id": "a0a259cf-a00b-4d04-bb07-61662576163c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryTouchContact",
                    "type": "Button",
                    "id": "1c2fe767-195e-48aa-b08c-895128a9226e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryFingerTap",
                    "type": "Button",
                    "id": "331d9053-8103-411f-9267-c02a94e27d32",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2f8906a0-cfb0-4395-a8d6-43adcf25b5b1",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "MobileTouchScheme",
                    "action": "PrimaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b21bc3cc-9d4c-4780-ac71-02bc42789077",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "MobileTouchScheme",
                    "action": "SecondaryFingerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "263ed6e0-75ca-4bab-aa7d-86f08b748d81",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "MobileTouchScheme",
                    "action": "SecondaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5a90c95-ec54-46d5-8adb-8f77fc9cb279",
                    "path": "<Touchscreen>/Press",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "MobileTouchScheme",
                    "action": "PrimaryFingerTap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MobileTouchScheme",
            "bindingGroup": "MobileTouchScheme",
            "devices": []
        }
    ]
}